--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 AC_PREREQ(2.52)
 
 AC_INIT([apertium-quc], [0.1.0], [ftyers@prompsit.com])
-AM_INIT_AUTOMAKE([apertium-quc], [0.1.0], no-define)
+AM_INIT_AUTOMAKE
 AC_PROG_LN_S
 AC_PROG_AWK
 
@@ -36,4 +36,3 @@ AS_IF([test x$CGCOMP = xfalse], [AC_MSG_ERROR([You don't have cg-comp installed]
 AP_MKINCLUDE
 
 AC_OUTPUT([Makefile apertium-quc.pc])
-
