--- a/Makefile.am
+++ b/Makefile.am
@@ -71,7 +71,7 @@ $(LANG1).autogen.att.gz: $(LANG1).gen.hfst
 	hfst-fst2txt $< | gzip -9 -c > $@
 
 $(LANG1).automorf.att.gz: $(LANG1).mor.hfst
-	hfst-fst2txt $< | gzip -9 -c > $@
+	hfst-invert $< |  hfst-compose -F -1 - -2 quc.spellrelax.hfst  | hfst-invert | hfst-fst2txt | gzip -9 -c > $@
 
 $(LANG1).autoseg.att.gz: $(LANG1).seg.hfst
 	hfst-fst2txt $< | gzip -9 -c > $@
