setup apertium-regtest

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,21 @@ config.status
 install-sh
 missing
 modes/
+/*.zhfst
+/.DS_Store
+/INSTALL
+/Makefile
+/Makefile.in
+/ap_include.am
+/autom4te.cache
+/config.log
+/config.status
+/configure
+/install-sh
+/missing
+/modes
+/*.mode
+/*-*.prob
+/.deps
+/config.in
+/config
