--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,9 @@ AC_CHECK_PROG([CGCOMP], [cg-comp], [yes], [no])
 AS_IF([test x$CGCOMP = xno], [AC_MSG_ERROR([You don't have cg-comp installed])])
 
 
+PKG_CHECK_MODULES(REGTEST, apertium-regtest >= 0.0.1, [],
+                  [AC_MSG_WARN([Running tests requires apertium-regtest])])
+
 AP_MKINCLUDE
 
 AC_OUTPUT([Makefile apertium-quc.pc])
